Created first version of CodeReview 3

--- a/CodeReview3/B12/makefile
+++ b/CodeReview3/B12/makefile
@@ -1,4 +1,4 @@
-all: ticTacToeResult hiddenLoop
+all: ticTacToeResult hiddenLoop connectFour
 
 .outputFolder:
 	mkdir -p out
@@ -10,3 +10,7 @@ ticTacToeResult: .outputFolder
 hiddenLoop: .outputFolder
 	clang -std=c++17 -lstdc++ -lm hiddenLoop.cpp -Wall -Wextra -Werror -o out/hiddenLoop
 	./out/hiddenLoop
+
+connectFour: .outputFolder
+	clang -std=c++17 -lstdc++ -lm connectFour.cpp -Wall -Wextra -Werror -o out/connectFour
+	./out/connectFour
