--- a/CodeReview3/B12/makefile
+++ b/CodeReview3/B12/makefile
@@ -1,15 +1,15 @@
-all: ticTacToeResult hiddenLoop connectFour
+all: connectFour
 
 .outputFolder:
 	mkdir -p out
 	
-ticTacToeResult: .outputFolder
-	clang -std=c++17 -lstdc++ -lm ticTacToeResult.cpp -Wall -Wextra -Werror -o out/ticTacToeResult
-	./out/ticTacToeResult
+# ticTacToeResult: .outputFolder
+# 	clang -std=c++17 -lstdc++ -lm ticTacToeResult.cpp -Wall -Wextra -Werror -o out/ticTacToeResult
+# 	./out/ticTacToeResult
 
-hiddenLoop: .outputFolder
-	clang -std=c++17 -lstdc++ -lm hiddenLoop.cpp -Wall -Wextra -Werror -o out/hiddenLoop
-	./out/hiddenLoop
+# hiddenLoop: .outputFolder
+# 	clang -std=c++17 -lstdc++ -lm hiddenLoop.cpp -Wall -Wextra -Werror -o out/hiddenLoop
+# 	./out/hiddenLoop
 
 connectFour: .outputFolder
 	clang -std=c++17 -lstdc++ -lm connectFour.cpp -Wall -Wextra -Werror -o out/connectFour
