cr6: fixed exc3

--- a/CodeReview6/Makefile
+++ b/CodeReview6/Makefile
@@ -1,4 +1,4 @@
-all: exercise2 
+all: exercise3
 
 .outputFolder:
 	mkdir -p out
@@ -11,6 +11,18 @@ exercise2: .outputFolder
 	clang -std=c++23 -lstdc++ -lm exercise2.cpp -Wall -Wextra -Werror -o out/exercise
 	./out/exercise
 
+exercise3: .outputFolder
+	clang -std=c++23 -lstdc++ -lm exercise3.cpp -Wall -Wextra -Werror -o out/exercise
+	./out/exercise
+
+exercise4: .outputFolder
+	clang -std=c++23 -lstdc++ -lm exercise4.cpp -Wall -Wextra -Werror -o out/exercise
+	./out/exercise
+
 exercise5: .outputFolder
 	clang -std=c++23 -lstdc++ -lm exercise5.cpp -Wall -Wextra -Werror -o out/exercise
+	./out/exercise
+
+exc2_templ: .outputFolder
+	clang -std=c++23 -lstdc++ -lm exc2_templ.cpp -Wall -Wextra -Werror -o out/exercise
 	./out/exercise
